RESOLVED FIXED 159132
WebRTC: Misc MediaStreamEvent fixes: Update build flag and remove PassRefPtr usage
https://bugs.webkit.org/show_bug.cgi?id=159132
Summary WebRTC: Misc MediaStreamEvent fixes: Update build flag and remove PassRefPtr ...
Adam Bergkvist
Reported 2016-06-27 00:42:18 PDT
The MediaStreamEvent needs some attention.
Attachments
Proposed patch (4.76 KB, patch)
2016-06-27 00:46 PDT, Adam Bergkvist
no flags
Updated patch (5.31 KB, patch)
2016-06-28 02:36 PDT, Adam Bergkvist
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-yosemite (850.27 KB, application/zip)
2016-06-28 03:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (924.48 KB, application/zip)
2016-06-28 03:31 PDT, Build Bot
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (1.16 MB, application/zip)
2016-06-28 03:31 PDT, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-yosemite (1.48 MB, application/zip)
2016-06-28 03:46 PDT, Build Bot
no flags
Updated patch (11.52 KB, patch)
2016-06-28 11:45 PDT, Adam Bergkvist
no flags
Updated patch (9.92 KB, patch)
2016-06-28 14:13 PDT, Adam Bergkvist
buildbot: commit-queue-
Archive of layout-test-results from ews124 for ios-simulator-wk2 (946.88 KB, application/zip)
2016-06-28 15:17 PDT, Build Bot
no flags
Updated patch (10.65 KB, patch)
2016-06-28 21:29 PDT, Adam Bergkvist
no flags
Updated patch (10.65 KB, patch)
2016-06-28 21:32 PDT, Adam Bergkvist
no flags
Adam Bergkvist
Comment 1 2016-06-27 00:46:55 PDT
Created attachment 282106 [details] Proposed patch
Adam Bergkvist
Comment 2 2016-06-28 02:36:38 PDT
Created attachment 282230 [details] Updated patch
Build Bot
Comment 3 2016-06-28 03:29:19 PDT
Comment on attachment 282230 [details] Updated patch Attachment 282230 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1585456 New failing tests: fast/events/constructors/media-stream-event-constructor.html js/dom/global-constructors-attributes.html
Build Bot
Comment 4 2016-06-28 03:29:21 PDT
Created attachment 282235 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-06-28 03:31:11 PDT
Comment on attachment 282230 [details] Updated patch Attachment 282230 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1585458 New failing tests: fast/events/constructors/media-stream-event-constructor.html js/dom/global-constructors-attributes.html
Build Bot
Comment 6 2016-06-28 03:31:13 PDT
Created attachment 282236 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-06-28 03:31:26 PDT
Comment on attachment 282230 [details] Updated patch Attachment 282230 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1585442 New failing tests: fast/events/constructors/media-stream-event-constructor.html
Build Bot
Comment 8 2016-06-28 03:31:29 PDT
Created attachment 282237 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 9 2016-06-28 03:46:20 PDT
Comment on attachment 282230 [details] Updated patch Attachment 282230 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1585461 New failing tests: fast/events/constructors/media-stream-event-constructor.html js/dom/global-constructors-attributes.html
Build Bot
Comment 10 2016-06-28 03:46:23 PDT
Created attachment 282239 [details] Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Adam Bergkvist
Comment 11 2016-06-28 11:45:10 PDT
Created attachment 282264 [details] Updated patch Update skip lists and expected results on ports not building with WEB_RTC
Adam Bergkvist
Comment 12 2016-06-28 14:13:55 PDT
Created attachment 282283 [details] Updated patch
Build Bot
Comment 13 2016-06-28 15:17:35 PDT
Comment on attachment 282283 [details] Updated patch Attachment 282283 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1588547 New failing tests: fast/events/constructors/media-stream-event-constructor.html
Build Bot
Comment 14 2016-06-28 15:17:38 PDT
Created attachment 282290 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Adam Bergkvist
Comment 15 2016-06-28 21:29:31 PDT
Created attachment 282314 [details] Updated patch Skipped constructor test on iOS
WebKit Commit Bot
Comment 16 2016-06-28 21:30:25 PDT
Attachment 282314 [details] did not pass style-queue: ERROR: LayoutTests/ChangeLog:14: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Bergkvist
Comment 17 2016-06-28 21:32:47 PDT
Created attachment 282315 [details] Updated patch
Adam Bergkvist
Comment 18 2016-06-29 08:51:22 PDT
Comment on attachment 282315 [details] Updated patch Thanks Eric
WebKit Commit Bot
Comment 19 2016-06-29 09:19:01 PDT
Comment on attachment 282315 [details] Updated patch Clearing flags on attachment: 282315 Committed r202625: <http://trac.webkit.org/changeset/202625>
WebKit Commit Bot
Comment 20 2016-06-29 09:19:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.