WebRTC: Misc MediaStreamEvent fixes: Update build flag and remove PassRefPtr usage https://bugs.webkit.org/show_bug.cgi?id=159132

Reviewed by Eric Carlson.

Source/WebCore:

Use the WEB_RTC build flag instead of MEDIA_STREAM since this event is related to
RTCPeerConnection. Also remove PassRefPtr usage.

Updated existing expected results.

* Modules/mediastream/MediaStreamEvent.cpp:
(WebCore::MediaStreamEvent::create):
(WebCore::MediaStreamEvent::MediaStreamEvent):
* Modules/mediastream/MediaStreamEvent.h:
* Modules/mediastream/MediaStreamEvent.idl:
* dom/EventNames.in:

LayoutTests:

Update skip lists and expected results to not expect the MediaStreamEvent constructor in
the global scope (it's under the WEB_RTC build flag).

* platform/mac-yosemite/js/dom/global-constructors-attributes-expected.txt:
* platform/mac/js/dom/global-constructors-attributes-expected.txt:
(all above) Remove expected results associated with MediaStreamEvent constructor.
* platform/ios-simulator/TestExpectations:
* platform/mac/TestExpectations:
Skip MediaStreamEvent constructor test on ports that dont't build with WEB_RTC yet.


Canonical link: https://commits.webkit.org/177372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202625 268f45cc-cd09-0410-ab3c-d52691b4dbfc